# wave-generator

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile
app/: CMakeLists.txt  application.cc  application.h  application_config.h  main.cc
lib/: CMakeLists.txt
lib/model/: CMakeLists.txt  cached_signal_samples_generator.cc  cached_signal_samples_generator.h  signal_samples_generator.cc  signal_samples_generator.h  sound_device.cc  sound_device.h  sound_generator.cc  sound_generator.h  sound_recorder.cc  sound_recorder.h  wav_format.cc  wav_format.cpp  wav_format.h
lib/synthesizer/: CMakeLists.txt  amplitude_frequency_generator.cc  amplitude_frequency_generator.h  constant_generator.cc  constant_generator.h  integrator.cc  integrator.h  mixer_generator.cc  mixer_generator.h  pulse_generator.cc  pulse_generator.h  sawtooth_generator.cc  sawtooth_generator.h  signal_generator.cc  signal_generator.h  sine_generator.cc  sine_generator.h  triangular_generator.cc  triangular_generator.h  white_noise_generator.cc  white_noise_generator.h
lib/view/: CMakeLists.txt  demo_view.cpp  demo_view.h  editor_view.cc  editor_view.h  player_view.cc  player_view.h  synthesizer_view.cc  synthesizer_view.cpp  synthesizer_view.h  view.cc  view.cpp  view.h  wav_recorder_view.cc  wav_recorder_view.h
lib/view/node/: node_input_view.cc  node_input_view.h  node_input_views.cc  node_input_views.h  node_port_view.cc  node_port_view.h  node_port_views.cc  node_port_views.h  node_view.cc  node_view.h  node_view_factory.cc  node_view_factory.h  node_views.cc  node_views.h
res/: CMakeLists.txt
